# OOAP

Lab 4.1/: Lab 4.1.sln
Lab 4.1/Lab 4.1/: Lab 4.1.cpp  Lab 4.1.vcxproj
Lab 4.1/Lab 4.1/x64/Debug/: Lab 4.1.ilk  (+2 more)
Lab 4.2/: Lab 4.2.sln
Lab 4.2/Lab 4.2/: Lab 4.2.cpp  Lab 4.2.vcxproj
Lab05/: Lab05.sln
Lab05/Lab05/: Lab05.cpp  Lab05.vcxproj
Lab06/: Lab06.sln
Lab06/Lab06/: Lab06.cpp  Lab06.vcxproj
Lab07/: Lab07.sln
Lab07/Lab07/: Lab07.cpp  Lab07.vcxproj
Lab08/: CMakeLists.txt  Main.qml  TextMediator.h  main.cpp
Lab09/: CMakeLists.txt  Main.qml  lockedstate.cpp  lowbatterystate.cpp  main.cpp  playercontext.cpp  playercontext.h  state.cpp  unlockedstate.cpp
Lab1/: Lab1.sln
Lab1.1/Lab1/: Lab1.cpp  Lab1.vcxproj
Lab1.2/: Lab1.2.sln
Lab1.2/Lab1.2/: Lab1.2.cpp  Lab1.2.vcxproj
Lab10/: Lab10.sln
Lab10/Lab10/: Lab10.cpp  Lab10.vcxproj
Lab11/: Lab11.sln
Lab11/Lab11/: MainWindow.xaml  MainWindow.xaml.cs
Lab2.1/: Lab2.1.sln
Lab2.1/Lab2.1/: Lab2.1.cpp  Lab2.1.vcxproj
Lab2.2/: Lab2.2.sln
Lab2.2/Lab2.2/: Lab2.2.cpp  Lab2.2.vcxproj
Lab3.1/: Lab3.1.sln
Lab3.1/Lab3.1/: Lab3.1.cpp  Lab3.1.vcxproj  sales_log.txt
Lab3.2/: Lab3.2.sln
Lab3.2/Lab3.2/: Lab3.2.cpp  Lab3.2.vcxproj
Mkr4/: Mkr4.sln
Mkr4/Mkr4/: Mkr4.cpp  Mkr4.vcxproj  Mkr4.vcxproj.filters
Modul 3/ZavdMkr3/: ZavdMkr3.sln
Modul 3/ZavdMkr3/ZavdMkr3/: ZavdMkr3.cpp  ZavdMkr3.vcxproj  ZavdMkr3.vcxproj.filters
Модуль 1/5/: VehicleRegistry.sln
Модуль 1/5/5/: 5.cpp  5.vcxproj
Модуль 2/Modul C#/: Modul C#.sln
Модуль 2/Modul C#/Modul C#/: ClassDiagram1.cd  Modul C#.csproj  Program.cs
(+195 files in other folders)
